--- a/NoteRocket.Client/Components/NotePage.razor
+++ b/NoteRocket.Client/Components/NotePage.razor
@@ -1,5 +1,9 @@
-﻿<p>THis is a note</p>
+﻿@page "/notes/edit"
+
+<h1>@note.Title</h1>
+
+  @* <InputTextArea></InputTextArea> *@
 
 @code {
-
+    private Note note = new Note { Title = "Title 1", Body = "<b>NoteBody<b>" };
 }
