--- a/NoteRocket.Client/Pages/Notes.razor
+++ b/NoteRocket.Client/Pages/Notes.razor
@@ -2,6 +2,17 @@
 
 <h1>Notes</h1>
 
+<ul>
+    @foreach(var category in Enum.GetValues<Category>())
+    {
+        <li>
+            <button id=@($"button-{category}")>
+                @category
+            </button>
+        </li>
+    }
+
+</ul>
 
 <ul>
     @foreach(var note in notes)
