using implicit razor expression for route param for simplicity

--- a/NoteRocket.Client/Pages/Notes.razor
+++ b/NoteRocket.Client/Pages/Notes.razor
@@ -28,7 +28,7 @@
     @foreach (var note in notes)
     {
         <li>
-            <a href=@($"/notes/edit/{note.Id}")>@note.Title</a>
+            <a href="/notes/edit/@note.Id">@note.Title</a>
         </li>
     }
 </ul>
