Moved NotePage logic into separate cs file

--- a/NoteRocket.Client/Components/NotePage.razor
+++ b/NoteRocket.Client/Components/NotePage.razor
@@ -1,9 +1,6 @@
-﻿@page "/notes/edit/{Id:int}"
+﻿@page "/notes/edit/{id:int}"
 
-<h1>@note.Title</h1>
+@* <h1>@note.Title</h1> *@
+<p>@Id</p>
 
   @* <InputTextArea></InputTextArea> *@
-
-@code {
-    private Note note = new Note { Title = "Title 1", Body = "<b>NoteBody<b>" };
-}
