Adding note Title and Body to NotePage in UI

--- a/NoteRocket.Client/Components/NotePage.razor
+++ b/NoteRocket.Client/Components/NotePage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/notes/edit/{id:int}"
 
-@* <h1>@note.Title</h1> *@
+ <h1>@note.Title</h1>
 <p>@Id</p>
+<p>@note.Body</p>
 
   @* <InputTextArea></InputTextArea> *@
