--- a/NoteRocket.Client/Components/NotePage.razor
+++ b/NoteRocket.Client/Components/NotePage.razor
@@ -23,7 +23,7 @@
 
         <br/>
 
-        <button class="btn btn-primary" type="submit">Save</button>
+        <button id="save-note-btn" class="btn btn-primary" type="submit">Save</button>
 
     </EditForm>
 }
