Creating new StorageService and implementing this in NoteService

--- a/NoteRocket.Client/_Imports.razor
+++ b/NoteRocket.Client/_Imports.razor
@@ -6,7 +6,9 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using NoteRocket
 @using NoteRocket.Client
 @using NoteRocket.Client.Components
 @using NoteRocket.Client.Models
-@using NoteRocket.Client.Extensions
+@using NoteRocket.Client.Services
+
