Adding to README Adding skeleton of AddNote functionality

--- a/NoteRocket.Client/Pages/NotesHome.razor
+++ b/NoteRocket.Client/Pages/NotesHome.razor
@@ -22,6 +22,12 @@
 
 </div>
 
+
+<div class="col"> 
+    <buitton type="button" class="btn btn-primary" id="new-note-btn" @onclick="@AddNote">New note</buitton>
+</div>
+
+
 <ul>
     
     @if(Notes is not null)
