WIP: allow user to add new note

--- a/NoteRocket.Client/Pages/NotesHome.razor
+++ b/NoteRocket.Client/Pages/NotesHome.razor
@@ -24,7 +24,7 @@
 
 
 <div class="col"> 
-    <buitton type="button" class="btn btn-primary" id="new-note-btn" @onclick="@AddNote">New note</buitton>
+    <button type="button" class="btn btn-primary" id="new-note-btn" @onclick="@AddNote">New note</button>
 </div>
 
 
